# ADAM

./: .gitignore  ADAM.py  README.md  database.db  pyproject.toml  requirements.txt
templates/: create_quiz.html  error.html  index.html  instructions.html  quiz.html  student_dashboard.html  teacher.html  teacher_dashboard.html  teacher_login.html
